testsuite/tests/tool-toplevel/topeval.compilers.reference
module A :
  sig type ('foo, 'bar) t val get_foo : ('foo, 'a) t -> 'foo option end


Line 6, characters 0-3:
6 | let _bar = A.get_foo
    ^^^
Error: Syntax error

